# Multithreaded-Log-Analyzer

./: CMakeLists.txt  README.md  generate_logs.cpp  plot_speedup.py
include/: LogEntry.h  LogParser.h  StatsManager.h  ThreadPool.h
src/: LogParser.cpp  StatsManager.cpp  ThreadPool.cpp  main.cpp
tests/: test_basic.cpp
